Refactor environment configuration and add database setup script

--- a/.env
+++ b/.env
@@ -1,6 +1,19 @@
 # Configurações de conexão com o banco PostgreSQL
-PGHOST=localhost
-PGPORT=5432
-PGDATABASE=meu_banco
-PGUSER=meu_usuario
-PGPASSWORD=minha_senha
+HOST=localhost
+PORT=5432
+DB=restauracao_db
+USER=postgres
+PASSWORD=postgres
+
+
+# =========================================
+# 📁 Caminho dos arquivos SQL
+# =========================================
+# Use caminho absoluto ou relativo à raiz do projeto
+SQL_PATH=/Scripts
+
+# Indicar psql para linux e manter as variaveis abaixo para windows
+#PSQL_CMD=psql
+#SHP2PGSQL_CMD=shp2pgsql
+PSQL_CMD="C:/Program Files/PostgreSQL/18/bin/psql.exe"
+SHP2PGSQL_CMD="C:/Program Files/PostgreSQL/18/bin/shp2pgsql.exe"
